--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -44,7 +44,7 @@
   }
 
   & a {
-    color: var(--red);
+    color: var(--contrast-red);
     transition: color 0.3s ease;
     font-size: 2.4rem;
 
