--- a/src/components/NavLink/NavLink.module.css
+++ b/src/components/NavLink/NavLink.module.css
@@ -3,9 +3,9 @@
 }
 
 .link:hover {
-  color: var(--red);
+  color: var(--contrast-red);
 }
 
 .link.active {
-  color: var(--red);
+  color: var(--contrast-red);
 }
