--- a/src/components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -15,7 +15,7 @@
 }
 
 .link {
-  color: var(--yellow);
+  color: var(--contrast-red);
   &:hover {
     text-decoration: underline;
   }
